--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,14 @@
         "c:\\Users\\grudk\\OneDrive\\Pulpit\\javafx-sdk-21.0.1\\lib\\javafx.media.jar",
         "c:\\Users\\grudk\\OneDrive\\Pulpit\\javafx-sdk-21.0.1\\lib\\javafx.swing.jar",
         "c:\\Users\\grudk\\OneDrive\\Pulpit\\javafx-sdk-21.0.1\\lib\\javafx.web.jar",
-        "c:\\Users\\grudk\\OneDrive\\Pulpit\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar"
+        "c:\\Users\\grudk\\OneDrive\\Pulpit\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar",
+        "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx.base.jar",
+        "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx.controls.jar",
+        "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx.fxml.jar",
+        "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx.graphics.jar",
+        "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx.media.jar",
+        "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx.swing.jar",
+        "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx.web.jar",
+        "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx-swt.jar"
     ]
 }
