--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
         "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx.swing.jar",
         "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx.web.jar",
         "c:\\Users\\antyg\\OneDrive\\Pulpit\\javafx-sdk-21.0.2\\lib\\javafx-swt.jar"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
