fixed physics engine (euler)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "PhysicsEngine",
+            "request": "launch",
+            "mainClass": "com.game.PhysicsEngine",
+            "projectName": "core"
+        },
+        {
+            "type": "java",
             "name": "DesktopLauncher",
             "request": "launch",
             "mainClass": "com.game.DesktopLauncher",
@@ -17,6 +24,6 @@
             "request": "launch",
             "mainClass": "com.game.DesktopLauncher",
             "projectName": "project-1.2-ken-17-desktop"
-        }
+        },
     ]
 }
