--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,28 +16,32 @@
             "name": "PhysicsEngine",
             "request": "launch",
             "mainClass": "com.game.PhysicsEngine",
-            "projectName": "project-1.2-ken-17-core"
+            "projectName": "project-1.2-ken-17-core",
+            "vmArgs": "-XstartOnFirstThread"
         },
         {
             "type": "java",
             "name": "PhysicsEngine",
             "request": "launch",
             "mainClass": "com.game.PhysicsEngine",
-            "projectName": "core"
+            "projectName": "core",
+            "vmArgs": "-XstartOnFirstThread"
         },
         {
             "type": "java",
             "name": "DesktopLauncher",
             "request": "launch",
             "mainClass": "com.game.DesktopLauncher",
-            "projectName": "desktop"
+            "projectName": "desktop",
+            "vmArgs": "-XstartOnFirstThread"
         },
         {
             "type": "java",
             "name": "Launch DesktopLauncher",
             "request": "launch",
             "mainClass": "com.game.DesktopLauncher",
-            "projectName": "project-1.2-ken-17-desktop"
+            "projectName": "project-1.2-ken-17-desktop",
+            "vmArgs": "-XstartOnFirstThread"
         }
     ]
 }
