Added backround music

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "name": "GolfAI",
             "request": "launch",
             "mainClass": "com.game.GolfAI",
-            "projectName": "core"
+            "projectName": "core",
+            "vmArgs": "-XstartOnFirstThread"
         },
         {
             "type": "java",
@@ -17,6 +18,7 @@
             "request": "launch",
             "mainClass": "com.game.PhysicsEngine",
             "projectName": "project-1.2-ken-17-core",
+            "vmArgs": "-XstartOnFirstThread"
         },
         {
             "type": "java",
@@ -24,6 +26,7 @@
             "request": "launch",
             "mainClass": "com.game.PhysicsEngine",
             "projectName": "core",
+            "vmArgs": "-XstartOnFirstThread"
 
         },
         {
@@ -32,6 +35,7 @@
             "request": "launch",
             "mainClass": "com.game.DesktopLauncher",
             "projectName": "desktop",
+            "vmArgs": "-XstartOnFirstThread"
 
         },
         {
@@ -40,6 +44,7 @@
             "request": "launch",
             "mainClass": "com.game.DesktopLauncher",
             "projectName": "project-1.2-ken-17-desktop",
+            "vmArgs": "-XstartOnFirstThread"
         }
     ]
 }
